--- a/xpi/locale/fr/options.dtd
+++ b/xpi/locale/fr/options.dtd
@@ -7,7 +7,7 @@
 <!ENTITY Ctr_space			"Espace">
 <!ENTITY Ctr_separator		"Séparateur">
 <!ENTITY Ctr_puibseparator	"Séparateur du bouton menu">
-<!ENTITY Ctr_sidebarbutton	"(Sidebar)">
+<!ENTITY Ctr_sidebarbutton	"(Panneau latéral)">
 
 <!ENTITY Ctr_cuibuttons		"Boutons">
 <!ENTITY Ctr_cuibutnormal	"Taille normale">
@@ -47,10 +47,10 @@
 <!ENTITY Ctr_closetab_3		"À la fin de la barre d'onglets">
 <!ENTITY Ctr_closetab_4		"Au début de la barre d'onglets">
 <!ENTITY Ctr_closetab_5		"Sur tous les onglets (forcé)">
-<!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
-<!ENTITY Ctr_closealt		"Alternative icon">
-<!ENTITY Ctr_closeonleft	"Alternative position on tab">
-<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config)">
+<!ENTITY Ctr_closetab_hfot	"Cacher si un seul onglet est visible">
+<!ENTITY Ctr_closealt		"Icône alternative">
+<!ENTITY Ctr_closeonleft	"Position alternative sur l'onglet">
+<!ENTITY Ctr_close_wwltab	"Fermer la fenêtre lorsque je ferme le dernier onglet (about:config)">
 
 <!ENTITY Ctr_appbutton		"Bouton d'applications">
 <!ENTITY Ctr_appbutton0		"Bouton désactivé">
@@ -83,10 +83,10 @@
 <!ENTITY Ctr_bfurlbarfix 	"Corriger le border-radius de la barre d'adresse">
 <!ENTITY Ctr_backforward	"Bouton avancer/reculer déplaçable">
 <!ENTITY Ctr_hide_bf_popup	"Cacher le menu historique lors du clic droit">
-<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
+<!ENTITY Ctr_noconicons		"Remplacer les icônes du menu contextuel de la page par du texte (Page précédente, Page suivante, Arrêter/Actualiser, Marquer cette page)">
 <!ENTITY Ctr_wincontrols	"Plein écran : boutons 'Réduire - Restaurer - Fermer' déplaçables">
 <!ENTITY Ctr_starinurl		"Bouton des marque-pages dans la barre d'adresse (redémarrer Fx!)">
-<!ENTITY Ctr_feedinurl		"Feed-button in urlbar (redémarrer Fx!)">
+<!ENTITY Ctr_feedinurl		"Bouton d'abonnement aux flux dans la barre d'adresse (redémarrer Fx!)">
 <!ENTITY Ctr_mstatusbar		"Barre d'état déplaçable">
 <!ENTITY Ctr_hideurelstop	"Masquer 'stop-actualiser' sur la barre d'adresse">
 <!ENTITY Ctr_combrelstop 	"Combiner les boutons stop-actualiser">
@@ -139,8 +139,8 @@
 <!ENTITY Ctr_favicon		"Favicon">
 <!ENTITY Ctr_emptyfavicon	"Restaurer le favicon vide sur les onglets (sites ne possédant pas de favicon)">
 <!ENTITY Ctr_emptyfavicon2	"Remplacer le favicon générique (vide avec pointillés) par un favicon avec l'aspect d'une feuille de papier">
-<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
-<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
+<!ENTITY Ctr_noemptypticon	"Enlever les favicons vides des onglets épinglés">
+<!ENTITY Ctr_faviconurl0	"Icônes dans la barre d'adresse">
 <!ENTITY Ctr_faviconurl		"Afficher le favicon dans la barre d'adresse (redémarrer Firefox!)">
 <!ENTITY Ctr_padlock_hid	"Cadenas (caché)">
 <!ENTITY Ctr_padlock_def	"Cadenas (par défaut)">
