--- a/xpi/locale/ja/options.dtd
+++ b/xpi/locale/ja/options.dtd
@@ -7,7 +7,7 @@
 <!ENTITY Ctr_space			"スペース">
 <!ENTITY Ctr_separator		"セパレータ">
 <!ENTITY Ctr_puibseparator	"パネル UI ボタンセパレータ">
-<!ENTITY Ctr_sidebarbutton	"(Sidebar)">
+<!ENTITY Ctr_sidebarbutton	"(サイドバー)">
 
 <!ENTITY Ctr_cuibuttons		"ボタン">
 <!ENTITY Ctr_cuibutnormal	"通常">
@@ -18,7 +18,7 @@
 <!ENTITY Ctr_cuitxt			"テキスト">
 
 <!ENTITY Ctr_combrelstoptt	"[中止][再読み込み] &gt;&gt; [中止-再読み込み]">
-<!ENTITY Ctr_tnot			"(tabs not on top)">
+<!ENTITY Ctr_tnot			"(タブを上にする)">
 
 <!ENTITY Ctr_tabcolors_t	"タブ色 &amp; テキスト">
 <!ENTITY Ctr_icons_t		"ファビコン &amp; アイコン">
@@ -47,10 +47,10 @@
 <!ENTITY Ctr_closetab_3		"ツールバーの最後に表示">
 <!ENTITY Ctr_closetab_4		"ツールバーの最初に表示">
 <!ENTITY Ctr_closetab_5		"全タブ (強制)">
-<!ENTITY Ctr_closetab_hfot	"Hide for one visible tab">
-<!ENTITY Ctr_closealt		"Alternative icon">
-<!ENTITY Ctr_closeonleft	"Alternative position on tab">
-<!ENTITY Ctr_close_wwltab	"Close window with last visible tab (about:config)">
+<!ENTITY Ctr_closetab_hfot	"可視タブに対して隠す">
+<!ENTITY Ctr_closealt		"別バージョンのアイコンにする">
+<!ENTITY Ctr_closeonleft	"別の位置に表示">
+<!ENTITY Ctr_close_wwltab	"最後の可視タブをもつウィンドウを閉じる (about:config)">
 
 <!ENTITY Ctr_appbutton		"アプリケーションボタン">
 <!ENTITY Ctr_appbutton0		"ボタンを無効にする">
@@ -83,10 +83,10 @@
 <!ENTITY Ctr_bfurlbarfix	"URLバーの border-radius を修正する">
 <!ENTITY Ctr_backforward	"戻る-進むボタンを移動可にする">
 <!ENTITY Ctr_hide_bf_popup	"マウスを押す時に履歴メニューを隠す">
-<!ENTITY Ctr_noconicons		"Replace page context menu icons with labels (back, forward, stop, reload, bookmark page)">
+<!ENTITY Ctr_noconicons		"ラベル(戻る、進む、停止、ブックマーク)をもつページコンテキストメニューアイコンを置換する">
 <!ENTITY Ctr_wincontrols	"フルスクリーンウィンドウ制御を移動可にする (最小/最大/閉じる)">
 <!ENTITY Ctr_starinurl		"URLバーにスターボタンを表示する (要 Firefox 再起動)">
-<!ENTITY Ctr_feedinurl		"Feed-button in urlbar (要 Firefox 再起動)">
+<!ENTITY Ctr_feedinurl		"URLバーにフィードボタンを表示する (要 Firefox 再起動)">
 <!ENTITY Ctr_mstatusbar		"ステータスバーパネルを移動可にする">
 <!ENTITY Ctr_hideurelstop	"URL バーの中止&amp;再読み込みボタンを隠す">
 <!ENTITY Ctr_combrelstop	"中止&amp;再読み込みボタンを組み合わせる">
@@ -139,8 +139,8 @@
 <!ENTITY Ctr_favicon		"ファビコン設定">
 <!ENTITY Ctr_emptyfavicon	"空 favicon を表示する (サイトが提供しない場合)">
 <!ENTITY Ctr_emptyfavicon2	"スタイルシートファビコンで汎用ファビコン (空ドット) を置換する">
-<!ENTITY Ctr_noemptypticon	"Remove empty favicon from pinned tab">
-<!ENTITY Ctr_faviconurl0	"Icons in urlbar">
+<!ENTITY Ctr_noemptypticon	"ピン止めタブから空ファビコンを取り除く">
+<!ENTITY Ctr_faviconurl0	"URLバーのアイコン">
 <!ENTITY Ctr_faviconurl		"URLバーにファビコンを表示する (要 Firefox 再起動)">
 <!ENTITY Ctr_padlock_hid	"南京錠 (隠す)">
 <!ENTITY Ctr_padlock_def	"南京錠 (デフォルト)">
